--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Exo+2:wght@400;600;800&display=swap" rel="stylesheet">  <style>
     :root{
-      --bg-1:#080b13; --bg-2:#0b1220; --line:#1a253e;
+      --bg-1:#070a12; --bg-2:#0b1220; --line:#1b2743;
       --ink:#e7eeff; --muted:#93a2c7;
       --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
       --maxw:1240px;
+      --headerH:76px; /* desktop header approx */
+      --footerH:58px; /* desktop footer approx */
     }
 
     /* RESET */
@@ -20,10 +22,8 @@
     html,body{height:100%}
     body{margin:0}
 
-    /* PAGE */
+    /* BACKGROUND */
     body{
-      /* PC: fit-to-screen no scroll, Mobile: normal scroll */
-      overflow-x:hidden;
       color:var(--ink);
       font-family:'Exo 2',system-ui,-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
       background:
@@ -31,40 +31,49 @@
         radial-gradient(1200px 900px at 85% 110%, #071120 0%, transparent 60%),
         linear-gradient(120deg, var(--bg-1), var(--bg-2));
       background-repeat:no-repeat; background-size:cover;
+      overflow-x:hidden;
     }
-    @media (min-width:1024px){ body{height:100vh; overflow-y:hidden; display:grid; grid-template-rows:auto 1fr auto;} }
-    @media (max-width:1023px){ body{min-height:100svh; overflow-y:auto; display:flex; flex-direction:column;} }
+
+    /* ===== DESKTOP LAYOUT: fit-to-screen, no scroll ===== */
+    @media (min-width:1024px){
+      html,body{height:100%}
+      body{display:grid;grid-template-rows:var(--headerH) 1fr var(--footerH);height:100vh;overflow:hidden}
+    }
+
+    /* ===== MOBILE/TABLET: normal scroll and refresh works ===== */
+    @media (max-width:1023px){
+      body{min-height:100svh;display:flex;flex-direction:column;overflow-y:auto}
+    }
 
     /* WRAP (smooth appear) */
-    .wrap{max-width:var(--maxw);margin:0 auto;padding:64px 20px 24px;width:100%;opacity:0;transform:translateY(10px);filter:blur(6px);transition:opacity .6s ease,transform .6s ease,filter .6s ease}
+    .wrap{max-width:var(--maxw);margin:0 auto;padding:20px 20px 12px;width:100%;opacity:0;transform:translateY(10px);filter:blur(6px);transition:opacity .6s ease,transform .6s ease,filter .6s ease}
     .app-ready .wrap{opacity:1;transform:none;filter:blur(0)}
 
     /* HEADER */
-    header{display:flex;align-items:center;gap:16px;padding:18px 0 22px;border-bottom:1px solid var(--line)}
+    header{height:var(--headerH);display:flex;align-items:center;gap:16px;border-bottom:1px solid var(--line)}
     .brand{display:flex;align-items:center;gap:14px;margin-top:6px;position:relative}
     .logo img{width:92px;height:auto;border-radius:20px;box-shadow:0 10px 24px rgba(17,177,255,.22)}
     .brand .title{display:flex;flex-direction:column;gap:4px}
     .brand h1{font-family:'Orbitron',sans-serif;font-weight:700;font-size:clamp(18px,2vw,28px);letter-spacing:.9px;background:linear-gradient(90deg,var(--accent),var(--accent2));-webkit-background-clip:text;color:transparent}
     .brand p{color:var(--muted);font-size:clamp(12px,1.6vw,14px)}
 
-    /* OLD-TV ELECTRIC INTRO (subtle but clear) */
-    .brand::after{content:"";position:absolute;left:-12px;right:-12px;top:-6px;height:2px;background:repeating-linear-gradient(90deg,rgba(17,177,255,.0)0 6px,rgba(17,177,255,.35)7px,rgba(17,177,255,.0)8px);opacity:0;pointer-events:none}
-    .brand.electric::after{animation:scan 900ms ease-out 1 forwards}
-    @keyframes scan{0%{opacity:.9;transform:translateY(-8px)}100%{opacity:0;transform:translateY(42px)}}
+    /* Old-TV ELECTRIC intro */
     .brand.electric h1,.brand.electric p{animation:crtFlicker .9s steps(18,end) 1 both}
     .brand.electric .logo img{animation:crtPulse .6s ease-out 1 both}
     @keyframes crtPulse{0%{filter:brightness(.6) blur(.4px)}40%{filter:brightness(1.35) blur(.2px) drop-shadow(0 0 22px rgba(17,177,255,.45))}100%{filter:brightness(1) blur(0) drop-shadow(0 0 10px rgba(17,177,255,.2))}}
     @keyframes crtFlicker{0%,8%{opacity:.25; filter:blur(.6px)} 20%{opacity:1; filter:blur(0)} 35%{opacity:.4} 55%{opacity:1} 100%{opacity:1}}
 
-    /* MAIN GRID (fits PC viewport height without scroll) */
+    /* MAIN: desktop fills remaining viewport exactly */
     main{display:grid;grid-template-columns:1.05fr .95fr;align-items:center;gap:clamp(28px,5vw,60px)}
-    @media (min-width:1024px){ main{height:calc(100vh - 64px - 58px);} } /* header ~64, footer ~58 */
+    @media (min-width:1024px){ main{height:calc(100vh - var(--headerH) - var(--footerH));padding-block:12px} }
+
     .content{display:flex;flex-direction:column;justify-content:center}
 
     h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:clamp(28px,6vw,60px);line-height:1.06;margin:0 0 14px;background:linear-gradient(90deg,var(--accent),#7dd3fc);-webkit-background-clip:text;color:transparent}
     p.lead{color:#cfe0ff;line-height:1.68;margin:0 0 14px;font-size:clamp(14px,1.8vw,18px)}
 
-    /* Bullets with typewriter later */
+    /* Prevent hero jump when bullets type in */
+    #typing-list{min-height:4.8em} /* ~3 lines reserved */
     ul{list-style:none;margin:0 0 18px 0}
     li{position:relative;padding-left:26px;margin:8px 0;font-weight:600}
     li::before{content:"";position:absolute;left:0;top:.55em;width:14px;height:9px;border-left:3px solid #00b7ff;border-top:3px solid #00b7ff;transform:skewX(-18deg) rotate(-45deg);filter:drop-shadow(0 0 6px rgba(17,177,255,.5))}
@@ -73,7 +82,7 @@
     .apply-btn{display:inline-flex;align-items:center;gap:10px;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:12px 28px;border-radius:14px;font-weight:800;letter-spacing:.6px;box-shadow:0 12px 28px rgba(17,177,255,.28);font-family:'Orbitron',sans-serif;border:0;cursor:not-allowed}
     .note{font-size:13px;color:var(--muted)}
 
-    /* TERMS CARD (appears LAST with futuristic flip+glow) */
+    /* TERMS CARD – appears LAST */
     .terms{position:relative;justify-self:end;max-width:min(520px,92vw);width:100%;opacity:0;transform:translateY(16px) rotateX(8deg);transform-style:preserve-3d;filter:blur(8px)}
     .app-ready .terms{animation:termsIn .85s cubic-bezier(.22,.61,.36,1) 1.1s forwards}
     @keyframes termsIn{0%{opacity:0;transform:translateY(16px) rotateX(8deg);filter:blur(8px)}60%{opacity:1;transform:translateY(-2px) rotateX(0);filter:blur(2px)}100%{opacity:1;transform:none;filter:blur(0)}}
@@ -85,13 +94,13 @@
     .label{color:var(--muted);font-size:14px}
     .value{font-weight:800}
 
-    /* FOOTER */
-    footer{border-top:1px solid var(--line);padding:14px 20px;display:flex;justify-content:space-between;align-items:center;gap:12px;color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
+    /* FOOTER (always visible) */
+    footer{height:var(--footerH);display:flex;align-items:center;justify-content:space-between;gap:12px;padding:0 20px;border-top:1px solid var(--line);color:var(--muted);font-size:14px;background:rgba(0,10,20,.2);backdrop-filter:saturate(125%) blur(2px)}
     .foot-group{display:flex;align-items:center;gap:10px;flex-wrap:wrap}
     .chip{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:12px;border:1px solid rgba(17,177,255,.26);background:linear-gradient(180deg,rgba(17,177,255,.06),rgba(17,177,255,.02));text-decoration:none;color:#d6eaff;font-weight:700}
     .chip svg{width:16px;height:16px}
 
-    /* SPLASH (exact 1s pulse, then fade) */
+    /* SPLASH */
     .splash{position:fixed;inset:0;z-index:9999;display:grid;place-items:center;background:radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),linear-gradient(120deg, var(--bg-1), var(--bg-2));}
     .splash__logo{width:min(240px,40vw);height:auto;border-radius:22px;box-shadow:0 0 44px rgba(17,177,255,.45),0 0 0 2px rgba(255,255,255,.08) inset;animation:pulse1s 1s ease-in-out 1 both}
     @keyframes pulse1s{0%{opacity:0;transform:scale(.92)}50%{opacity:1;transform:scale(1.05)}100%{opacity:1;transform:scale(1)}}
@@ -107,12 +116,13 @@
     .coin{animation:pop 650ms cubic-bezier(.22,.61,.36,1) forwards}
     @keyframes pop{0%{opacity:.0; transform:translate(-50%,-50%) scale(.3)}20%{opacity:1; transform:translate(-50%,-50%) scale(1)}70%{opacity:1; transform:translate(-50%, -110%) scale(.9)}100%{opacity:0; transform:translate(-50%,-160%) scale(.6)}}
 
-    /* MOBILE TWEAKS */
-    @media (max-width:900px){
+    /* MOBILE tweaks to ensure visibility */
+    @media (max-width:1023px){
+      .wrap{padding:16px}
+      header{height:auto;padding:12px 0}
       main{grid-template-columns:1fr}
       .terms{justify-self:start}
-      .wrap{padding:60px 16px 20px}
-      footer{padding-inline:16px}
+      footer{position:static;height:auto;padding:12px 16px}
     }
     @media (max-width:520px){
       h2{font-size:clamp(24px,9vw,34px)}
@@ -122,7 +132,7 @@
 
     @media (prefers-reduced-motion: reduce){
       .wrap{transition:none}
-      .splash__logo,.splash.is-fading,.terms,.brand.electric h1,.brand.electric p,.brand.electric::after{animation:none}
+      .splash__logo,.splash.is-fading,.terms,.brand.electric h1,.brand.electric p{animation:none}
     }
   </style></head>
 <body>
@@ -177,9 +187,8 @@
       </a>
     </div>
   </footer>  <script>
-    // Stable splash -> reveal -> typing, terms hover glow, click coin
     (function(){
-      // Only enforce top reset on desktop so mobile pull-to-refresh isn't blocked
+      // On desktop, keep viewport pinned at the top; allow natural refresh on mobile
       if(window.matchMedia('(min-width:1024px)').matches){
         if('scrollRestoration' in history){ history.scrollRestoration = 'manual'; }
         window.scrollTo(0,0);
@@ -204,13 +213,13 @@
             const t=setTimeout(forceReveal,650);
             splash.addEventListener('animationend',()=>{clearTimeout(t); forceReveal();},{once:true});
           }else{ forceReveal(); }
-        },1000); // 1s pulse then fade
+        },1000);
       }
 
       document.addEventListener('DOMContentLoaded', begin);
-      setTimeout(forceReveal, 3200); // ultimate fail-safe
+      setTimeout(forceReveal, 3200);
 
-      // Typewriter bullets
+      // Typewriter bullets without layout jump (reserved height above)
       function startTyping(){
         const list = document.getElementById('typing-list'); if(!list) return;
         const items = Array.from(list.querySelectorAll('li'));
@@ -219,7 +228,7 @@
         setTimeout(typeNext, 120);
       }
 
-      // Follow glow over terms card
+      // Terms parallax glow
       if(terms){
         const move=(e)=>{ const r=terms.getBoundingClientRect(); const x=((e.clientX-r.left)/r.width)*100; const y=((e.clientY-r.top)/r.height)*100; terms.style.setProperty('--mx',x+'%'); terms.style.setProperty('--my',y+'%'); };
         terms.addEventListener('mouseenter',()=>terms.classList.add('is-hot'));
@@ -227,7 +236,7 @@
         window.addEventListener('mousemove',(e)=>{ if(terms.classList.contains('is-hot')) move(e); },{passive:true});
       }
 
-      // Click coin
+      // Click coin delight
       window.addEventListener('click',(e)=>{ const c=document.createElement('div'); c.className='coin'; c.style.left=e.clientX+'px'; c.style.top=e.clientY+'px'; document.body.appendChild(c); setTimeout(()=>c.remove(),700); });
 
       // Footer year
