--- a/index.html
+++ b/index.html
@@ -1,42 +1,246 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>F1 Cash — Simple Business Funding</title>
 <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
+<meta name="theme-color" media="(prefers-color-scheme: light)" content="#11b1ff">
+<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#05070d">
+<meta name="color-scheme" content="dark light">
 
-<!-- Futuristic fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- Open Graph / Twitter -->
+<meta property="og:title" content="F1 Cash — Simple Business Funding">
+<meta property="og:description" content="Fast working capital up to $1,000 with clear monthly payments.">
+<meta property="og:type" content="website">
+<meta property="og:image" content="assets/logo.png">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Fonts: preconnect + display swap -->
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
+<link rel="icon" href="assets/logo.png">
 
 <style>
 /* ---------- THEME ---------- */
 :root{
-  --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640; --ink:#e6ecff; --muted:#92a0c5;
+  --bg-1:#05070d; --bg-2:#0b1220;
+  --line:#1b2540; --ink:#e6ecff; --muted:#94a6d2;
   --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
+  --ok:#32d583; --warn:#fdb022;
 }
 
 /* ---------- RESET / QUALITY ---------- */
-*{box-sizing:border-box;margin:0;padding:0}
+*{box-sizing:border-box}
 html,body{height:100%}
 body{
-  min-height:100vh; display:flex; flex-direction:column; color:var(--ink);
-  background: radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
-              linear-gradient(120deg, var(--bg-1), var(--bg-2));
-  overflow-x:hidden;
+  margin:0; min-height:100svh; display:flex; flex-direction:column; color:var(--ink);
+  background:
+    radial-gradient(1200px 800px at 10% -10%, #0c1325 0%, #06080f 60%, #05070d 100%),
+    linear-gradient(120deg, var(--bg-1), var(--bg-2));
   font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
   -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; text-rendering:optimizeLegibility;
+  overflow-x:hidden;
 }
-/* subtle animated ambience */
+
+/* Ambient sheen + grid lines */
 body::before{
-  content:""; position:fixed; inset:-20% -20% -20% -20%; pointer-events:none; z-index:-1;
+  content:""; position:fixed; inset:-20%; pointer-events:none; z-index:-2;
   background:
     radial-gradient(60% 40% at 20% 20%, rgba(17,177,255,.08), transparent 60%),
     radial-gradient(50% 35% at 80% 10%, rgba(110,231,255,.06), transparent 60%),
     radial-gradient(60% 45% at 60% 80%, rgba(17,177,255,.05), transparent 70%);
-  animation:floatSheen 26s ease-in-out infinite alternate; filter:saturate(1.05);
+  animation:floatSheen 26s ease-in-out infinite alternate;
+  filter:saturate(1.05);
 }
+body::after{
+  /* faint cyber grid */
+  content:""; position:fixed; inset:0; z-index:-3; pointer-events:none; opacity:.15;
+  background:
+    linear-gradient(transparent 31px, rgba(17,177,255,.08) 32px),
+    linear-gradient(90deg, transparent 31px, rgba(17,177,255,.08) 32px);
+  background-size:32px 32px;
+  mask:radial-gradient(1200px 800px at 50% 30%, #000 0%, transparent 80%);
+}
+
 @keyframes floatSheen{
-  0%{tran
+  0%{transform:translate3d(0,0,0) scale(1)}
+  50%{transform:translate3d(-2%,1%,0) scale(1.02)}
+  100%{transform:translate3d(2%,-1%,0) scale(1.02)}
+}
+
+/* ---------- STARFIELD (canvas hidden if reduced motion) ---------- */
+.starfield{position:fixed; inset:0; z-index:-4; opacity:.35;}
+
+/* ---------- SPLASH ---------- */
+.splash{
+  position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
+  background:
+    radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
+    linear-gradient(120deg, var(--bg-1), var(--bg-2));
+  opacity:1; visibility:visible; transition:opacity .7s ease, visibility .7s ease;
+  will-change:opacity;
+}
+.splash__logo{
+  inline-size:184px; block-size:auto; border-radius:26px; overflow:hidden;
+  box-shadow:0 20px 48px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
+  animation:doublePulse 1.8s ease-in-out infinite; position:relative;
+  filter:drop-shadow(0 8px 18px rgba(0,0,0,.45));
+}
+.splash__logo::after{
+  content:""; position:absolute; inset:-22%; border-radius:32px;
+  background:radial-gradient(closest-side, rgba(17,177,255,.28), rgba(17,177,255,0) 60%);
+  animation:halo 1.8s ease-in-out infinite; pointer-events:none;
+}
+@keyframes doublePulse{
+  0%{transform:translateY(0) scale(1)}
+  10%{transform:translateY(-1px) scale(1.06)}
+  20%{transform:translateY(0) scale(1)}
+  35%{transform:translateY(-1px) scale(1.04)}
+  50%{transform:translateY(0) scale(1)}
+  100%{transform:translateY(0) scale(1)}
+}
+@keyframes halo{
+  0%{opacity:.35; transform:scale(1)}
+  10%{opacity:.60; transform:scale(1.06)}
+  20%{opacity:.35; transform:scale(1)}
+  35%{opacity:.55; transform:scale(1.04)}
+  50%{opacity:.35; transform:scale(1)}
+  100%{opacity:.35; transform:scale(1)}
+}
+.splash.is-fading{opacity:0}
+.splash.is-hidden{opacity:0; visibility:hidden}
+
+@media (prefers-reduced-motion: reduce){
+  .splash__logo{animation:none}
+  .splash__logo::after{display:none}
+  .splash{transition:none}
+  .starfield{display:none}
+}
+
+/* ---------- LAYOUT ---------- */
+.wrap{max-width:1080px;margin-inline:auto;padding:28px 18px;flex:1;width:100%;
+  opacity:0; transform:translateY(8px); transition:opacity .6s ease, transform .6s ease}
+.app-ready .wrap{opacity:1;transform:none}
+.wrap{content-visibility:auto; contain-intrinsic-size:800px}
+
+/* Header */
+header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
+.logo img{ inline-size:94px; block-size:auto; border-radius:18px; box-shadow:0 10px 24px rgba(17,177,255,.22); }
+.logo-text h1{
+  font-family:'Orbitron',system-ui,sans-serif;font-weight:700;font-size:22px;letter-spacing:.9px;
+  background:linear-gradient(90deg,var(--accent),var(--accent2));
+  -webkit-background-clip:text;background-clip:text;color:transparent;
+  background-size:220% 100%; animation:shine 4.2s ease-in-out infinite;
+  text-shadow:0 0 18px rgba(17,177,255,.10);
+}
+.logo-text p{color:var(--muted);font-size:13px}
+
+/* Main */
+main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:40px;padding:24px 0}
+.content{flex:1 1 460px; perspective:1000px}
+
+h2{
+  font-family:'Orbitron',system-ui,sans-serif; font-weight:800; font-size:44px; line-height:1.12;
+  margin:0 0 12px; letter-spacing:.3px; background:linear-gradient(90deg,var(--accent),#7dd3fc);
+  -webkit-background-clip:text;background-clip:text;color:transparent;
+  filter:drop-shadow(0 6px 18px rgba(17,177,255,.12));
+}
+p{color:#b6c3da;line-height:1.65;margin:0 0 22px;font-size:1.05rem}
+ul{list-style:disc;margin:0 0 22px 20px}
+li{margin:0 0 8px}
+
+/* Apply button: neon, 3D hover, focus-visible */
+.apply-btn{
+  display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;
+  padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;font-family:'Orbitron',system-ui,sans-serif;
+  box-shadow:0 10px 26px rgba(17,177,255,.28), 0 0 0 1px rgba(255,255,255,.06) inset;
+  position:relative; text-decoration:none; user-select:none; transition:transform .3s ease, box-shadow .3s ease, opacity .2s;
+  transform:translateZ(0);
+}
+.apply-btn[aria-disabled="true"]{cursor:not-allowed;opacity:.78}
+.apply-btn::after{
+  content:""; position:absolute; inset:-2px; border-radius:14px; pointer-events:none;
+  background:conic-gradient(from 180deg,var(--accent),var(--accent2),var(--accent));
+  filter:blur(14px); opacity:.35; transition:opacity .3s ease;
+}
+.apply-btn:hover{transform:translateY(-2px)}
+.apply-btn:active{transform:translateY(0)}
+.apply-btn:focus-visible{outline:none; box-shadow:0 0 0 3px #003d66, 0 0 0 6px rgba(17,177,255,.55)}
+
+/* Glass card with animated border */
+.card{
+  flex:1 1 330px; position:relative; border-radius:18px; padding:22px;
+  background:linear-gradient(180deg, rgba(14,19,34,.8), rgba(13,18,32,.65));
+  border:1px solid var(--line);
+  box-shadow:0 16px 42px rgba(0,0,0,.35), inset 0 0 1px rgba(255,255,255,.05);
+  transform-style:preserve-3d; will-change:transform;
+}
+.card::before{
+  content:""; position:absolute; inset:-1px; border-radius:19px; z-index:-1;
+  background:conic-gradient(from 140deg at 50% 50%, rgba(17,177,255,.35), transparent 30%, rgba(110,231,255,.25), transparent 70%, rgba(17,177,255,.35));
+  filter:blur(12px); opacity:.35; transition:opacity .3s ease;
+}
+.card:hover::before{opacity:.6}
+.card h3{color:#a8dfff;font-size:1.15rem;margin:0 0 10px;border-bottom:1px solid rgba(53,198,255,.18);padding-bottom:8px}
+.row{display:grid;grid-template-columns:auto 1fr;gap:10px 14px;align-items:center;margin:10px 0}
+.label{color:var(--muted);font-size:13px}
+.value{font-weight:700}
+.icon{inline-size:16px; block-size:16px; display:inline-block; vertical-align:-2px}
+.icon svg{inline-size:16px; block-size:16px; display:block}
+
+/* Footer */
+footer{
+  position:relative; z-index:1; display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center;gap:12px;
+  padding:18px 18px; background:rgba(0,10,20,.28); backdrop-filter:saturate(120%) blur(2px); color:var(--muted); font-size:14px;
+}
+footer::before{
+  content:""; position:absolute; inset:0 0 auto 0; height:1px;
+  background:linear-gradient(90deg,transparent,var(--accent),transparent); opacity:.65;
+}
+footer a{color:var(--ink); position:relative; text-decoration:none}
+footer a::after{
+  content:""; position:absolute; left:0; right:0; bottom:-2px; height:1px;
+  background:linear-gradient(90deg,transparent,var(--accent),transparent);
+  transform:scaleX(0); transform-origin:center; transition:transform .3s ease;
+}
+footer a:hover::after{transform:scaleX(1)}
+
+/* ---------- RESPONSIVE ---------- */
+@media (max-width:960px){
+  .wrap{padding:24px 16px}
+  main{flex-direction:column}
+  h2{font-size:36px}
+  .logo img{inline-size:86px}
+  .splash__logo{inline-size:168px}
+}
+@media (max-width:520px){
+  h2{font-size:30px}
+  .card{padding:18px}
+  .splash__logo{inline-size:148px}
+}
+
+/* ---------- MICRO INTERACTIONS ---------- */
+@keyframes shine{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
+
+</style>
+</head>
+
+<body>
+  <!-- Starfield -->
+  <canvas class="starfield" id="starfield" aria-hidden="true"></canvas>
+
+  <!-- Splash -->
+  <div class="splash" id="splash" aria-hidden="true">
+    <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo" width="368" height="368" decoding="async">
+  </div>
+
+  <!-- Main content -->
+  <div class="wrap" id="app">
+    <header role="banner">
+      <a class="logo" href="#" aria-label="F1 Cash home">
+        <img src="assets/logo.png" alt="F1 Cash" width="188" height="188" loading="lazy" decoding="async">
+      </a>
+      <div class="logo-text">
