--- a/index.html
+++ b/index.html
@@ -244,3 +244,159 @@ footer a:hover::after{transform:scaleX(1)}
         <img src="assets/logo.png" alt="F1 Cash" width="188" height="188" loading="lazy" decoding="async">
       </a>
       <div class="logo-text">
+        <h1>F1 CASH</h1>
+        <p>Simple Business Funding</p>
+      </div>
+    </header>
+
+    <main role="main">
+      <section class="content" aria-labelledby="hero-title">
+        <h2 id="hero-title">Fast working capital for small businesses</h2>
+        <p>Funding up to <strong>$1,000</strong> with clear monthly payments and <em>no collateral or hard credit pulls</em>.</p>
+        <ul>
+          <li>Business owners with 12+ months in operation</li>
+          <li>Simple promissory note after verification</li>
+          <li>6 equal monthly installments</li>
+        </ul>
+        <a class="apply-btn" href="#" role="button" aria-disabled="true" title="Coming soon">APPLY NOW</a>
+        <p class="note" aria-live="polite">Button disabled for now — application link coming soon.</p>
+      </section>
+
+      <aside class="card" aria-label="At-a-glance terms" data-tilt>
+        <h3>At-a-glance terms</h3>
+        <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
+        <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
+        <div class="row">
+          <span class="label">
+            <span class="icon" aria-hidden="true">
+              <!-- Mail icon -->
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+            </span> Support
+          </span>
+          <span class="value"><a href="mailto:info@f1cash.net">info@f1cash.net</a></span>
+        </div>
+        <div class="row">
+          <span class="label">
+            <span class="icon" aria-hidden="true">
+              <!-- Phone icon -->
+              <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+            </span> Phone
+          </span>
+          <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
+        </div>
+      </aside>
+    </main>
+  </div>
+
+  <!-- Footer -->
+  <footer role="contentinfo">
+    <div>
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
+      </span>
+      &nbsp;<a href="mailto:info@f1cash.net">info@f1cash.net</a>
+      &nbsp;&nbsp;·&nbsp;&nbsp;
+      <span class="icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
+      </span>
+      &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
+    </div>
+    <div>© <span id="year">2025</span> F1 Cash · All rights reserved.</div>
+  </footer>
+
+  <!-- Structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "F1 Cash",
+    "url": "https://f1cash.net",
+    "logo": "https://f1cash.net/assets/logo.png",
+    "email": "info@f1cash.net",
+    "telephone": "+1 229-448-4389",
+    "sameAs": []
+  }
+  </script>
+
+  <!-- Scripts: splash, starfield, tilt, small niceties -->
+  <script>
+  (function(){
+    const reduce = matchMedia('(prefers-reduced-motion: reduce)').matches;
+    const splash = document.getElementById('splash');
+    const app = document.getElementById('app');
+    const yearEl = document.getElementById('year');
+    if (yearEl) yearEl.textContent = new Date().getFullYear();
+
+    function revealApp(){
+      document.body.classList.add('app-ready');
+      if (splash){ splash.classList.add('is-hidden'); }
+    }
+
+    if (reduce){
+      revealApp(); // instant
+    } else {
+      const INTRO_MS = 1100;
+      setTimeout(()=>{
+        if (!splash){ revealApp(); return; }
+        splash.classList.add('is-fading');
+        splash.addEventListener('transitionend', (e)=>{
+          if (e.propertyName === 'opacity'){ revealApp(); }
+        }, { once:true });
+      }, INTRO_MS);
+    }
+
+    // Minimal starfield (skips if reduced motion)
+    const canvas = document.getElementById('starfield');
+    if (canvas && !reduce){
+      const ctx = canvas.getContext('2d');
+      let w, h, stars;
+      const DPR = Math.min(devicePixelRatio || 1, 2);
+
+      function resize(){
+        w = canvas.width = innerWidth * DPR;
+        h = canvas.height = innerHeight * DPR;
+        canvas.style.width = innerWidth + 'px';
+        canvas.style.height = innerHeight + 'px';
+        stars = Array.from({length: Math.round((w*h)/14000)}, ()=>({
+          x: Math.random()*w,
+          y: Math.random()*h,
+          z: Math.random()*1.2 + .2,
+          a: Math.random()*0.5 + 0.2
+        }));
+      }
+      addEventListener('resize', resize, { passive:true });
+      resize();
+
+      function tick(){
+        ctx.clearRect(0,0,w,h);
+        for (const s of stars){
+          const size = s.z * 1.1;
+          ctx.fillStyle = `rgba(17,177,255,${s.a})`;
+          ctx.fillRect(s.x, s.y, size, size);
+          s.y += s.z * 0.15; // drift
+          if (s.y > h){ s.y = -2; s.x = Math.random()*w; }
+        }
+        requestAnimationFrame(tick);
+      }
+      requestAnimationFrame(tick);
+    }
+
+    // Lightweight 3D tilt for elements with [data-tilt]
+    const tiltEls = document.querySelectorAll('[data-tilt]');
+    if (!reduce && tiltEls.length){
+      tiltEls.forEach(el=>{
+        const strength = 10;
+        el.style.transform = 'rotateX(0) rotateY(0)';
+        el.addEventListener('pointermove', (e)=>{
+          const r = el.getBoundingClientRect();
+          const px = (e.clientX - r.left) / r.width - .5;
+          const py = (e.clientY - r.top) / r.height - .5;
+          el.style.transform = `rotateX(${(-py*strength).toFixed(2)}deg) rotateY(${(px*strength).toFixed(2)}deg)`;
+        });
+        el.addEventListener('pointerleave', ()=>{ el.style.transform = 'rotateX(0) rotateY(0)'; });
+      });
+    }
+  })();
+  </script>
+</body>
+</html>
