--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="F1 Cash provides simple, fast working capital for small businesses." />
 
 <!-- Futuristic fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
@@ -16,7 +16,7 @@
 :root{
   --bg-1:#05070d; --bg-2:#0b1220; --line:#1c2640; --ink:#e6ecff; --muted:#92a0c5;
   --accent:#11b1ff; --accent2:#6ee7ff; --glow:rgba(17,177,255,.28);
-  --success:#24ff90;
+  --ok:#2bffad; --warn:#ffd166;
 }
 
 /* ---------- RESET / QUALITY ---------- */
@@ -46,74 +46,101 @@ body::before{
   100%{transform:translate3d(2%,-1%,0) scale(1.02)}
 }
 
-/* ---------- SPLASH (logo + access text) ---------- */
+/* ---------- SPLASH: Space Vault ---------- */
 .splash{
-  position:fixed; inset:0; z-index:9999; display:flex; flex-direction:column;
-  align-items:center; justify-content:center; gap:26px;
-  background: radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
-              linear-gradient(120deg, var(--bg-1), var(--bg-2));
+  position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
+  background:
+    radial-gradient(1100px 800px at 50% -20%, #0c1325 0%, #06080f 65%, #05070d 100%),
+    linear-gradient(120deg, var(--bg-1), var(--bg-2));
   opacity:1; visibility:visible;
-  transition:opacity .7s ease, visibility .7s ease;
+  transition:opacity .65s ease, visibility .65s ease;
+  overflow:hidden;
 }
 
+/* Vault stage stack */
+.vault{
+  position:relative; width:min(62vmin,420px); aspect-ratio:1/1; display:grid; place-items:center;
+}
+
+/* Pulsing logo (center) */
 .splash__logo{
-  width:184px; height:auto; border-radius:26px;
+  width:38%; border-radius:22px;
   box-shadow:0 20px 48px var(--glow), 0 0 0 1px rgba(255,255,255,.06) inset;
   animation:doublePulse 1.8s ease-in-out infinite;
-  position:relative;
-  filter:drop-shadow(0 8px 18px rgba(0,0,0,.45));
+  position:relative; z-index:3;
+  filter:drop-shadow(0 10px 22px rgba(0,0,0,.45));
 }
 
-/* Halo */
-.splash__logo::after{
-  content:""; position:absolute; inset:-22%; border-radius:32px;
-  background:radial-gradient(closest-side, rgba(17,177,255,.28), rgba(17,177,255,.0) 60%);
-  animation:halo 1.8s ease-in-out infinite;
-  pointer-events:none;
+/* Concentric rotating neon rings (vault dial) */
+.ring, .ring::before, .ring::after{
+  content:""; position:absolute; inset:0; border-radius:50%;
+}
+.ring{
+  z-index:1; mix-blend-mode:screen; pointer-events:none;
+  box-shadow:0 0 0 1px rgba(255,255,255,.06) inset, 0 0 48px var(--glow);
+}
+.ring::before{
+  inset: -8%; border:2px dashed rgba(17,177,255,.55);
+  filter:drop-shadow(0 0 12px rgba(17,177,255,.55));
+  animation:spin 9s linear infinite;
+}
+.ring::after{
+  inset: -18%; border:2px solid transparent;
+  border-top-color: rgba(110,231,255,.85);
+  border-left-color: rgba(110,231,255,.45);
+  filter:drop-shadow(0 0 14px rgba(110,231,255,.85));
+  animation:spinReverse 12s linear infinite;
 }
 
-/* ACCESS APPROVED text */
-.splash__access{
-  font-family:'Orbitron',sans-serif;
-  font-size:1.1rem; letter-spacing:2px;
-  text-transform:uppercase;
-  color:var(--success);
-  opacity:0; transform:scale(0.9);
-  text-shadow:0 0 10px var(--success), 0 0 20px var(--success);
-  transition:opacity .5s ease, transform .5s ease;
-}
-.splash__access.visible{
-  opacity:1; transform:scale(1);
-}
-.splash__access.fadeout{
-  opacity:0; transform:scale(1.1);
-}
+@keyframes spin{ to{ transform:rotate(360deg) } }
+@keyframes spinReverse{ to{ transform:rotate(-360deg) } }
 
-/* Pulse animations */
+/* HUD text below logo */
+.hud{
+  position:absolute; bottom:-56px; left:50%; transform:translateX(-50%);
+  width:max(240px,48%); text-align:center; z-index:3;
+  font-family:'Orbitron',system-ui,sans-serif; letter-spacing:1.8px; text-transform:uppercase;
+  font-size:.82rem; color:#a8dfff; opacity:0; transform-origin:center;
+  transition:opacity .4s ease, filter .4s ease;
+  filter:saturate(1.1);
+}
+.hud .row{opacity:.85}
+.hud .ok{color:var(--ok)}
+.hud .warn{color:var(--warn)}
+.hud.visible{opacity:1}
+
+/* Sliding vault doors */
+.doors{position:absolute; inset:0; display:grid; grid-template-columns:1fr 1fr; z-index:4; pointer-events:none}
+.door{
+  background:
+    radial-gradient(600px 300px at 50% 0%, rgba(17,177,255,.12), transparent 70%),
+    linear-gradient(180deg, rgba(7,12,24,.92), rgba(6,10,20,.88));
+  border:1px solid rgba(110,150,230,.16);
+  backdrop-filter:saturate(110%) blur(1.5px);
+  box-shadow:inset 0 0 1px rgba(255,255,255,.05), 0 20px 50px rgba(0,0,0,.35);
+  transition:transform .9s cubic-bezier(.2,.8,.2,1);
+}
+.door.left{border-right:0}
+.door.right{border-left:0}
+.unlock .door.left{transform:translateX(-100%)}
+.unlock .door.right{transform:translateX(100%)}
+
+/* End state of splash */
+.splash.is-fading{opacity:0}
+.splash.is-hidden{opacity:0; visibility:hidden}
+
 @keyframes doublePulse{
-  0%   { transform:translateY(0) scale(1); }
-  10%  { transform:translateY(-1px) scale(1.06); }
-  20%  { transform:translateY(0) scale(1); }
-  35%  { transform:translateY(-1px) scale(1.04); }
-  50%  { transform:translateY(0) scale(1); }
-  100% { transform:translateY(0) scale(1); }
+  0%   { transform:translateY(0) scale(1) }
+  10%  { transform:translateY(-1px) scale(1.06) }
+  20%  { transform:translateY(0) scale(1) }
+  35%  { transform:translateY(-1px) scale(1.04) }
+  50%  { transform:translateY(0) scale(1) }
+  100% { transform:translateY(0) scale(1) }
 }
-@keyframes halo{
-  0%   { opacity:.35; transform:scale(1); }
-  10%  { opacity:.60; transform:scale(1.06); }
-  20%  { opacity:.35; transform:scale(1); }
-  35%  { opacity:.55; transform:scale(1.04); }
-  50%  { opacity:.35; transform:scale(1); }
-  100% { opacity:.35; transform:scale(1); }
-}
-
-/* Fade states */
-.splash.is-fading{ opacity:0; }              
-.splash.is-hidden{ opacity:0; visibility:hidden; } 
 
 @media (prefers-reduced-motion: reduce){
   .splash__logo{animation:none}
-  .splash__logo::after{display:none}
+  .ring::before, .ring::after{animation:none}
   .splash{transition:none}
 }
 
@@ -122,7 +149,6 @@ body::before{
   opacity:0; transform:translateY(8px); transition:opacity .6s ease, transform .6s ease}
 .app-ready .wrap{opacity:1;transform:none}
 
-/* Header etc. */
 header{display:flex;align-items:center;gap:16px;padding:10px 0 22px;border-bottom:1px solid var(--line)}
 .logo img{ width:94px;height:auto;border-radius:18px; box-shadow:0 10px 24px rgba(17,177,255,.22); }
 .logo-text h1{
@@ -188,21 +214,32 @@ footer a:hover::after{transform:scaleX(1)}
   main{flex-direction:column}
   h2{font-size:36px}
   .logo img{width:86px}
-  .splash__logo{width:168px}
 }
 @media (max-width:520px){
   h2{font-size:30px}
   .card{padding:18px}
-  .splash__logo{width:148px}
 }
 </style>
 </head>
 
 <body>
-  <!-- Splash -->
+  <!-- Splash: SPACE VAULT -->
   <div class="splash" id="splash" aria-hidden="true">
-    <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
-    <div class="splash__access" id="accessText">ACCESS APPROVED</div>
+    <div class="vault" id="vault">
+      <div class="ring" aria-hidden="true"></div>
+      <img class="splash__logo" src="assets/logo.png" alt="F1 Cash logo">
+      <div class="hud" id="hud" aria-live="polite">
+        <div class="row">Initializing vault · <span class="warn">stand by…</span></div>
+        <div class="row" id="hud2" style="opacity:.15">Calibrating rings</div>
+        <div class="row" id="hud3" style="opacity:.15">Key handshake</div>
+      </div>
+
+      <!-- Doors (slide to open) -->
+      <div class="doors" id="doors" aria-hidden="true">
+        <div class="door left"></div>
+        <div class="door right"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Main content -->
@@ -235,6 +272,7 @@ footer a:hover::after{transform:scaleX(1)}
         <div class="row">
           <span class="label">
             <span class="icon" aria-hidden="true">
+              <!-- Mail icon -->
               <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
             </span> Support
           </span>
@@ -243,6 +281,7 @@ footer a:hover::after{transform:scaleX(1)}
         <div class="row">
           <span class="label">
             <span class="icon" aria-hidden="true">
+              <!-- Phone icon -->
               <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
             </span> Phone
           </span>
@@ -265,4 +304,74 @@ footer a:hover::after{transform:scaleX(1)}
       </span>
       &nbsp;<a href="tel:+12294484389">+1 229-448-4389</a>
     </div>
-    <div>©
+    <div>© 2025 F1 Cash · All rights reserved.</div>
+  </footer>
+
+  <!-- Vault sequence controller with bulletproof fallbacks -->
+  <script>
+  (function(){
+    var reduce = window.matchMedia && window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+    var splash = document.getElementById('splash');
+    var doors  = document.getElementById('doors');
+    var vault  = document.getElementById('vault');
+    var hud    = document.getElementById('hud');
+    var hud2   = document.getElementById('hud2');
+    var hud3   = document.getElementById('hud3');
+
+    function revealApp(){
+      document.body.classList.add('app-ready');
+      if (splash){ splash.classList.add('is-fading'); }
+      // Hide after fade completes, with extra fallback
+      var hid = false;
+      var done = function(){ if(hid) return; hid = true; splash && splash.classList.add('is-hidden'); };
+      if (splash){
+        splash.addEventListener('transitionend', function onEnd(e){
+          if (e.propertyName === 'opacity'){ splash.removeEventListener('transitionend', onEnd); done(); }
+        });
+      }
+      setTimeout(done, 800);
+    }
+
+    // Reduced motion: skip fancy stuff
+    if (reduce){
+      revealApp();
+      return;
+    }
+
+    // Timeline (ms)
+    var INTRO = 800;      // let the logo pulse a bit
+    var HUD1  = INTRO + 300;  // show HUD line 1
+    var HUD2  = INTRO + 700;  // show HUD line 2
+    var HUD3  = INTRO + 1000; // show HUD line 3
+    var UNLOCK= INTRO + 1300; // start doors opening
+    var REVEAL= UNLOCK + 950; // after doors finish, reveal content
+
+    // Step 1: show HUD lines (subtle)
+    setTimeout(function(){ hud && hud.classList.add('visible'); }, HUD1);
+    setTimeout(function(){ if(hud2){ hud2.style.opacity = 0.85; hud2.textContent = 'Calibrating rings — OK'; } }, HUD2);
+    setTimeout(function(){ if(hud3){ hud3.style.opacity = 0.85; hud3.innerHTML = 'Key handshake — <span style="color:var(--ok)">verified</span>'; } }, HUD3);
+
+    // Step 2: unlock doors
+    var unlocked = false;
+    setTimeout(function(){
+      if (!doors || unlocked) return;
+      unlocked = true;
+      vault.classList.add('unlock');
+      // Primary: wait for a door transition end
+      var done = false;
+      function finish(){ if(done) return; done = true; setTimeout(revealApp, 120); }
+      doors.addEventListener('transitionend', function onT(e){
+        if (e.propertyName === 'transform'){ doors.removeEventListener('transitionend', onT); finish(); }
+      });
+      // Fallback in case transitionend is missed
+      setTimeout(finish, 1000);
+    }, UNLOCK);
+
+    // Absolute fallback: ensure reveal even if everything else fails
+    setTimeout(function(){
+      if (!document.body.classList.contains('app-ready')) revealApp();
+    }, REVEAL + 600);
+  })();
+  </script>
+</body>
+</html>
